<resources>
    <string name="app_name">Carkir</string>

    <!-- Navigation Bottom -->
    <string name="carkir_navigation_home">Home</string>
    <string name="carkir_navigation_favorite">Favorite</string>
    <string name="carkir_navigation_history">History</string>

    <!-- Onboarding -->
    <string name="carkir_onboarding_one_title">Optimize Your Time</string>
    <string name="carkir_onboarding_one_description">Don\'t want to waste your time looking for a parking space? We are here to help you solve the problem!</string>
    <string name="carkir_onboarding_two_title">Easier</string>
    <string name="carkir_onboarding_two_description">Having trouble finding a parking space? We make it easy for you!</string>
    <string name="carkir_onboarding_three_title">One Destination</string>
    <string name="carkir_onboarding_three_description">Just looking at the smartphone, you will know the destination of the available parking space.</string>
    <string name="carkir_onboarding_button_get_started">Find a parking place</string>

    <!-- Home -->
    <string name="carkir_home_hint_searchbar">Find a Parking Space</string>
    <string name="carkir_home_title_location">Available Parking Space</string>
    <string name="carkir_home_title_recent">Recent Location Parking</string>
    <string name="carkir_home_recent_info_empty">There\'s no place you\'ve seen yet</string>

    <!-- History -->
    <string name="carkir_history_title">Parking Location History</string>
    <string name="carkir_history_description">Storage is only in local storage and only you can see. If you delete the app, the history will also be deleted forever</string>
    <string name="carkir_history_info_empty">There\'s no place you\'ve seen yet</string>
    <string name="carkir_home_info_error">An error occurred, please try again later</string>
    <string name="carkir_home_info_loading">Retrieving data, please wait</string>

    <!-- Favorite -->
    <string name="carkir_favorite_title">Your Favorite Parking Location</string>
    <string name="carkir_favorite_description">Storage is only in local storage and only you can see. If you delete the app, the history will also be deleted forever</string>
    <string name="carkir_favorite_info_empty">No favorite parking space yet</string>

    <!-- Detail -->
    <string name="carkir_detail_price_low">Rp %s for the cheapest price</string>
    <string name="carkir_detail_price_high">Rp %s for the highest price</string>
    <string name="carkir_detail_empty_floor">No parking space</string>
    <string name="carkir_detail_floor">Level %1$d (%2$s)</string>
    <string name="carkir_detail_title_space">%d Parking Available</string>
    <string name="carkir_detail_space_floor">%d Space available</string>
    <string name="carkir_detail_title_offline">You\'re Offline</string>
    <string name="carkir_detail_description_offline">You have use internet to refresh the data</string>

    <!-- Parking Layout -->
    <string name="carkir_parking_layout_total_empty_slot">%d Places left</string>
    <string name="carkir_parking_layout_name_parking">Area %s</string>
    <string name="carkir_parking_layout_availability_slot">Available</string>
    <string name="carkir_parking_layout_not_availability_slot">Not Available</string>
    <string name="carkir_parking_layout_empty_slot_parking">Parking layout not available</string>

    <!-- Card Item -->
    <string name="carkir_card_detail">Detail</string>
    <string name="carkir_card_slot_parking">%d Places available</string>
    <string name="carkir_card_see_at">Seeing on %s</string>

    <!-- Content Description -->
    <string name="carkir_contentDescription_imageButton_next">Next page</string>
    <string name="carkir_contentDescription_imageView_car">Car with time</string>
    <string name="carkir_contentDescription_imageView_easy">Easy to use</string>
    <string name="carkir_contentDescription_imageView_one_purpose">One purpose</string>
    <string name="carkir_contentDescription_imageView_card_location">Location image</string>
    <string name="carkir_contentDescription_imageView_parking">Parking space with cars</string>
    <string name="carkir_contentDescription_imageView_empty">Empty data</string>
    <string name="carkir_contentDescription_imageView_floor">Floor and clusters</string>
    <string name="carkir_contentDescription_imageView_slot_availability">Slot parking availability</string>
    <string name="carkir_contentDescription_imageView_info_color">Info color slot parking</string>
    <string name="carkir_contentDescription_imageView_offline">You\'re offline</string>
    <string name="carkir_contentDescription_FloatingActionButton_favorite">Favorite location</string>
    <string name="carkir_contentDescription_FloatingActionButton_delete">Delete All</string>

    <!-- Title Navigation Bottom -->
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_history">History</string>

    <!-- Title Support Action Bar -->
    <string name="carkir_title_detail">Detail Parking Place</string>
    <string name="carkir_title_parking_layout">Parking Layout</string>
</resources>