<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.history.HistoryFragment">

    <!-- TITLE -->
    <TextView
        android:id="@+id/tv_title_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carkir_history_title"
        android:textColor="?colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- DESCRIPTION -->
    <TextView
        android:id="@+id/tv_description_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carkir_history_description"
        android:textColor="?colorSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_history" />

    <!-- DIVIDER HORIZONTAL LINE -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="?colorSecondaryVariant"
        app:layout_constraintTop_toBottomOf="@id/tv_description_history" />

    <!-- LIST HISTORY LOCATION -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:listitem="@layout/card_item_histories" />

    <!-- BUTTON DELETE ALL HISTORY -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/carkir_contentDescription_FloatingActionButton_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete_all_24" />

    <!-- EMPTY FAVORITE LOCATION -->
    <LinearLayout
        android:id="@+id/empty_histories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:visibility="visible">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:contentDescription="@string/carkir_contentDescription_imageView_empty"
            app:srcCompat="@drawable/ic_empty_histories" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/carkir_history_info_empty"
            android:textAlignment="center"
            android:textColor="?colorSecondary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>