<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.favorite.FavoriteFragment">

    <!-- TITLE -->
    <TextView
        android:id="@+id/tv_title_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carkir_favorite_title"
        android:textColor="?colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- DESCRIPTION -->
    <TextView
        android:id="@+id/tv_description_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carkir_favorite_description"
        android:textColor="?colorSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_favorite" />

    <!-- DIVIDER HORIZONTAL LINE -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="?colorSecondaryVariant"
        app:layout_constraintTop_toBottomOf="@id/tv_description_favorite" />

    <!-- LIST FAVORITE LOCATION -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:listitem="@layout/card_item_favorite" />

    <!-- EMPTY FAVORITE LOCATION -->
    <LinearLayout
        android:id="@+id/empty_favorite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:visibility="visible">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:contentDescription="@string/carkir_contentDescription_imageView_empty"
            app:srcCompat="@drawable/ic_empty_favorites" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/carkir_favorite_info_empty"
            android:textAlignment="center"
            android:textColor="?colorSecondary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>