<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.capstone.carkirapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_history"
            app:destination="@id/navigation_history" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.bangkit.capstone.carkirapp.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.bangkit.capstone.carkirapp.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_navigation_history_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.bangkit.capstone.carkirapp.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="namePlace"
            app:argType="string" />
        <action
            android:id="@+id/action_detailFragment_to_parkingFragment"
            app:destination="@id/parkingFragment" />
    </fragment>
    <fragment
        android:id="@+id/parkingFragment"
        android:name="com.bangkit.capstone.carkirapp.ui.parking.ParkingFragment"
        android:label="fragment_parking"
        tools:layout="@layout/fragment_parking" >
        <argument
            android:name="floorAndClusters"
            app:argType="com.bangkit.capstone.carkirapp.model.FloorAndClusterModel" />
    </fragment>
</navigation>