<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- BANNER IMAGE -->
    <ImageView
        android:id="@+id/iv_home_banner"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:contentDescription="@string/carkir_contentDescription_imageView_parking"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/parking_home_banner" />

    <!-- SEARCH BAR -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_home_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/carkir_home_hint_searchbar"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/ic_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_home_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionSearch"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TITLE LOCATION -->
    <LinearLayout
        android:id="@+id/container_title_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_home_banner"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carkir_home_title_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_detail_list_location"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/carkir_contentDescription_imageButton_next"
            app:srcCompat="@drawable/ic_arrow_24" />
    </LinearLayout>

    <!-- LIST LOCATION -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_title_location"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_item_location" />

    <!-- CONTAINER RECENT -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_location"
        android:layout_marginTop="24dp"
        android:background="@drawable/box_recent">

        <!-- TITLE RECENT -->
        <LinearLayout
            android:id="@+id/container_title_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title_recent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/carkir_home_title_recent"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ib_detail_list_history"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/carkir_contentDescription_imageButton_next"
                app:srcCompat="@drawable/ic_arrow_24" />
        </LinearLayout>

        <!-- LIST RECENT HISTORY LOCATION -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_title_recent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/card_item_recent" />

    </RelativeLayout>
</RelativeLayout>